org.eclipse.help.webapp/advanced/tocTree.css
BODY {
	font: <%=prefs.getViewFont()%>;
	margin-top:2px;
	margin-<%=isRTL?"right":"left"%>:5px;
	padding:0;
	border:0;
	background-color: <%=prefs.getViewBackground()%>;
}

#root {
	margin-top:0px;
	margin-<%=isRTL?"right":"left"%>:0px;
}

DIV.root {
    font-weight:bold;
}

DIV.visible, DIV.unopened { 
	border-width:0; 
	margin-<%=isRTL?"right":"left"%>:1.5em; 
	font-weight:normal;
}
  
DIV.hidden {
	display:none; 
}

DIV.visible, DIV.root {  
    margin-top:3px; 
}

SPAN.item{
    white-space: nowrap;
}

IMG {
	border:0px;
	margin:0px;
	padding:0px;
	margin-<%=isRTL?"left":"right"%>:4px;
}


A {
	text-decoration:none; 
	color:WindowText;
	padding-<%=isRTL?"left":"right"%>:2px;
	/* this works in ie5.5, but not in ie5.0  */
	white-space: nowrap;
}

A:hover{
	text-decoration:underline; 
}

A.active{ 
	color:HighlightText;
	width:100%;
}

A.active:hover{
	text-decoration:underline; 
}

<%
if (requestData.isSafari()){
%>

A.active{ 
	background:DarkBlue;
}

<% 
} else {
%>

A.active{ 
	background:Highlight;
}

<%
}
%>

A.nolink {
	text-decoration:none; 
}

A.nolink:link, A.nolink:visited {
	color:WindowText;
}

A.nolink:hover {
	text-decoration:none; 
}

 

